# crypto-setups

./: .gitignore  README.md  pyproject.toml
.claude/agents/: crypto-setups-analyst.md  crypto-swings-analyst.md
.claude/skills/crypto-setups/: SKILL.md
.claude/skills/crypto-swings/: SKILL.md
config/: btc.json  eth.json
data/: macro_context.json
data-mirror/: ff_calendar_thisweek.json
docs/superpowers/plans/: 2026-04-18-price-action-layer.md
scripts/: emit_macro.py  emit_payload.py  extract_tickets.py
src/: avwap.py  config.py  cvd.py  derivatives.py  eth_btc.py  fetch.py  fvg.py  levels.py  liquidity.py  main.py  market_structure.py  news.py  notion_writer.py  options.py  order_blocks.py  recent_action.py  sessions.py  telegram_notify.py  tickets.py  types.py  volume_profile.py
state/: tickets_btc.jsonl  tickets_eth.jsonl
tests/: test_avwap.py  test_derivatives.py  test_end_to_end.py  test_fetch.py  test_fvg.py  test_level_adapters.py  test_levels.py  test_liquidity.py  test_market_structure.py  test_notion_writer.py  test_order_blocks.py  test_telegram_notify.py  test_tickets.py  test_volume_profile.py
