[project]
name = "crypto-swings"
version = "0.1.0"
description = "Fib confluence S/R tool for crypto (BTC, ETH) — single asset per run, driven by ASSET env var"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    "PyYAML>=6.0",
    "feedparser>=6.0",
    "trafilatura>=1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
